[gd_scene load_steps=5 format=2]

[ext_resource path="res://8 - Texture/shitbird.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Bird.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 26.5, 29.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 30.5, 32.5 )

[node name="Bird" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -7.62939e-06, -3.8147e-06 )
scale = Vector2( 0.221774, 0.227778 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -2.5, 0.5 )
shape = SubResource( 1 )

[node name="raycast" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 400 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="hitBox" type="Area2D" parent="."]
collision_layer = 5
collision_mask = 13

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitBox"]
position = Vector2( -2.5, 0.5 )
shape = SubResource( 2 )

[node name="SwoopTimer" type="Timer" parent="."]
wait_time = 4.0

[connection signal="area_entered" from="hitBox" to="." method="_on_hitBox_area_entered"]
[connection signal="body_entered" from="hitBox" to="." method="_on_hitBox_body_entered"]
[connection signal="timeout" from="SwoopTimer" to="." method="_on_SwoopTimer_timeout"]
